[added] fade out when cards match; [updated] fixed spacing of css code

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ body {
     transform-style: preserve-3d;
     -webkit-transform-origin: 50% 50%;
 }
+
 .card div {
     display: block;
     height: 100%;
@@ -150,12 +151,14 @@ body {
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
+
 .card .front {
     width: 100%;
     height: 100%;
     border-radius: 8px;
     position: absolute;
 }
+
 .card .back {
     width: 100%;
     height: 100%;
@@ -170,6 +173,7 @@ body {
     -o-transform: rotateY( 180deg );
     transform: rotateY( 180deg );
 }
+
 .card.flipped {
     -webkit-transform: rotateY( 180deg );
     -moz-transform: rotateY( 180deg );
@@ -177,39 +181,11 @@ body {
     transform: rotateY( 180deg );
 }
 
-/* .card {
-    max-width: 115px;
-    width: 15%;
-    height: 34%;
-    border: 1px solid black;
-    border-radius: 8px;
-    margin: 0.8% 2.5% 0.8% 2.5%;
-    position: relative;
-} */
-
-/* .front {
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    position: absolute;
-} */
-
 .card .front img {
     width: 100%;
     height: 100%;
     border-radius: 8px;
 }
-
-/* .back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-} */
 
 .card .back img {
     width: 100%;
